--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,13 @@ i {
     text-align: center;
     font-size: 25px;
 }
+
+.overflow {
+    overflow: visible;
+}
+
+.picker {
+    position: relative;
+    z-index: 1;
+    background-color: white;
+}
