--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root {
+  padding-left: 50px;
+  margin-top: -20px;
+  height: 800px;
+}
+.App {
+  height: inherit;
+}
