--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #332c29;
 }
 
 code {
@@ -13,7 +14,7 @@ code {
 }
 
 #root {
-  padding-left: 50px;
+  
   margin-top: -20px;
   height: 800px;
 }
