--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,41 @@
+#login {
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+#login-form {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    width: 300px;
+    height: 300px;
+}
+
+#login-form > input {
+    float: left;
+    clear: left;
+    background-color: #211c1c;
+    color: white;
+    font-size: 20px;
+    width: inherit;
+    border-radius: 5px;
+    border-style: none;
+    margin-bottom: 10px;
+    padding-left: 10px;
+}
+
+#login-form > input:focus {
+    border: none;
+}
+
+#login-form > input[type=button]:nth-child(3):hover {
+    cursor: pointer;
+    background-color: grey;
+    color: #332c29;
+}
 .square {
     /* display: inline-block; */
     /* border: solid black 1px; */
@@ -24,6 +62,10 @@
 #create-game:hover {
     background-color: grey;
     color: #332c29;
+    cursor: pointer;
+}
+#board:hover {
+    cursor: pointer;
 }
 
 #board {
